--- a/popup.css
+++ b/popup.css
@@ -136,10 +136,13 @@ p {
     padding: 0;
     }
 #switch .fa-icon:hover {
-    opacity: 0.6;
+    fill: #111;
     }
 body.off #switch .fa-icon {
     fill: var(--off);
+    }
+body.off #switch .fa-icon:hover {
+    fill: #00b300;
     }
 #basicTools {
     margin: 1.2em 0 0.5em 0;
