--- a/uBlock Dark Mode/css/dashboard-common.css
+++ b/uBlock Dark Mode/css/dashboard-common.css
@@ -1,8 +1,18 @@
+:root {
+    --dashboard-bg: #222;
+    --sub-bg: #999;
+    --border-1: #222;
+    --border-2: #555;
+    --text-1: #ccc;
+}
+
+
+
 body {
-    background-color: #999;
+    background-color: var(--dashboard-bg);
     box-sizing: border-box;
-    border-color: #999;
-    color: #000;
+    border-color: var(--border-1);
+    color: var(--text-1);
     margin: 0;
     padding: 0;
     }
@@ -26,13 +36,14 @@ h3 {
     }
 a {
     text-decoration: none;
+    color: #8ad; /*hyperlink color*/
     }
 a.info {
-    color: black;
+    color: var(--text-1);
     opacity: 0.3;
     }
 a.info:hover {
-    opacity: 0.9
+    opacity: 1;
     }
 a.info.important {
     color: orangered;
@@ -60,8 +71,8 @@ input[type="checkbox"][disabled] + label {
     width: 16px;
     height: 16px;
     background: url('../img/help16.png') no-repeat;
+    opacity: 0.8;
     cursor: pointer;
-    opacity: 0.5;
     vertical-align: middle;
     }
 .whatisthis:hover {
@@ -71,8 +82,8 @@ input[type="checkbox"][disabled] + label {
     margin: 0.5em 0 1em 1.25em;
     padding: 0.5em;
     display: none;
-    border: 1px dotted black;
-    background-color: #F8F8F8;
+    border: 1px dotted var(--border-2);
+    background-color: var(--sub-bg);
     font-size: 13px;
     white-space: pre-line;
     }
@@ -89,7 +100,7 @@ input[type="checkbox"][disabled] + label {
 .warn {
     margin: 0;
     padding: 5px;
-    background-color: #FEDAE0;
+    background-color: var(--sub-bg);
     }
 @media (max-height: 640px), (max-height: 800px) and (max-width: 480px) {
     .body > p,
